syntax = "proto3";

import "google/protobuf/wrappers.proto";
//import "reserved.proto"
option go_package = "./"; //dir of create proto-file

package ecommerce;

service OrderManagement {
    rpc processOrders(stream google.protobuf.StringValue) returns (stream CombinedShipment);
}

message Order {
    string id = 1;
    repeated string items = 2;
    string description = 3;
    float price = 4;
    string destination = 5;
}

message CombinedShipment {
    string id = 1;
    string status = 2;
    repeated Order ordersList = 3;
}

// Номера и имена зарезервированных полей сообщений. Don't use this
message Res {
  reserved 7, 8, 9 to 16, 120 to max;
  reserved "amount", "go";
}